force-app/main/default/objects/jrsl_ul_Unsubscribe__c/fields/jrsl_ul_Lead__c.field-meta.xml
<CustomField>
    <fullName>jrsl_ul_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead record to unsubscribe.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Unsubscribe</relationshipLabel>
    <relationshipName>UnsubscribeLink</relationshipName>
    <type>Lookup</type>
</CustomField>