force-app/main/default/objects/jrsl_ul_Unsubscribe__c/fields/jrsl_ul_Status__c.field-meta.xml
<CustomField>
    <fullName>jrsl_ul_Status__c</fullName>
    <description>Updated by Flows UnsubscribeLeads and UnsubscribeContacts.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>